<resources>
    <string name="app_name">RK ACM Gestión Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">info@inmobiliariaacm.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Registrar/Iniciar Sesion</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_compra">Comprar</string>
    <string name="menu_venta">Vender</string>
    <string name="menu_herencia">Gestión de Herencias</string>
    <string name="menu_hipoteca">Calcula tu Hipoteca</string>
    <string name="menu_sobreNosotros">Sobre Nosotros</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_desarrollador">Arturo Jiménez Ortuño</string>
    <string name="menu_desarrollador2">Gabriel Denia Moreno</string>
    <string name="menu_disenyo">Delma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Iniciar Sesion</string>
    <string name="action_cuenta">¿Tiene Cuenta?</string>
    <string name="action_sign_in">Registrar Cuenta</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="webClientId">631284948940-mvnh65lcalc95oq7b8q9jtutdja9ndch.apps.googleusercontent.com</string>
    <string name="msg_token">FCM Token: %s</string>
</resources>