<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:text="Desarrolladores:"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="670dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="18dp"
                android:text="@string/menu_desarrollador"
                android:layout_marginLeft="10dp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="18dp"
                android:text="@string/menu_desarrollador2"
                android:layout_marginLeft="10dp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:text="Diseñadores:"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="18dp"
                android:text="@string/menu_disenyo"
                android:layout_marginLeft="10dp"
                android:textStyle="italic"/>
        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>